--- a/_posts/p334.chapter.01.md
+++ b/_posts/p334.chapter.01.md
@@ -3,9 +3,9 @@ layout: post
 title: p334.chapter.1.pdf
 --- 
 
-# Chapter 1: Filing and Paying Business Taxes
+# Chapter 1: Filing & Paying Business Taxes
 
-- Overview of the business taxes and forms required.
+- Overview of the business taxes & forms required.
 - Discusses taxpayer identification numbers (TINs).
 
 <img src="/irs.ea/assets/images/p334.table1-2.png" width="80%" />
@@ -13,24 +13,24 @@ title: p334.chapter.1.pdf
 ## Identification Numbers
 
 1. Social Security Number (SSN):
-2. Individual Taxpayer Identification Number (ITIN): Issued to nonresident and resident aliens who are not eligible to obtain an SSN.
+2. Individual Taxpayer Identification Number (ITIN): Issued to nonresident & resident aliens who are not eligible to obtain an SSN.
 3. Employer Identification Number (EIN): Required if you have employees or file pension or excise tax returns.
 
 ## Income Tax
 
 1. Requirement to File: If net earnings from self-employment were $400 or more, or if other filing requirements are met.
 2. Filing Forms: 1040 or 1040-SR with Schedule C attached.
-3. Electronic Filing (IRS e-file): Benefits include accuracy, security, and faster refunds.
+3. Electronic Filing (IRS e-file): Benefits include accuracy, security, & faster refunds.
 
 ## Self-Employment Tax
 
-1. Purpose: Social security and Medicare tax for individuals who work for themselves.
+1. Purpose: Social security & Medicare tax for individuals who work for themselves.
 2. Requirement to Pay: Required if net earnings from self-employment are $400 or more.
 3. Rate: SE tax rate is 15.3%, with a portion deductible on Schedule 1 (Form 1040).
 
 ## Employment Taxes
 
-1. Types: Include social security, Medicare, federal income tax withholding, and federal unemployment tax (FUTA).
+1. Types: Include social security, Medicare, federal income tax withholding, & federal unemployment tax (FUTA).
 2. Filing Forms: 941 or 944 for reporting.
 
 ## Excise Taxes
@@ -53,7 +53,7 @@ title: p334.chapter.1.pdf
 1. Filing Forms:
    1. include Schedule C  
    2. Form 4797  
-   3. Form 941, and others  
+   3. Form 941, & others  
 
 ---
 
