--- a/_posts/p334.chapter.03.md
+++ b/_posts/p334.chapter.03.md
@@ -6,22 +6,22 @@ title: p334.chapter.3.pdf
 # Chapter 3: Income
 
 - Gains/Losses & Income/Expenses
-- Provides guidance on what constitutes business income and how it should be reported.
+- Provides guidance on what constitutes business income & how it should be reported.
 
 See Publications (for more detail)
 
-- 544 Sales and Other Dispositions of Assets
-- Form (and Instructions) 4797 Sales of Business Property
-- Sch D (Form 1040) Capital Gains and Losses
-- Casualties and thefts. Use Form 4684, 
-- Casualties and Thefts. You may also have to use Form 4797
+- 544 Sales & Other Dispositions of Assets
+- Form (& Instructions) 4797 Sales of Business Property
+- Sch D (Form 1040) Capital Gains & Losses
+- Casualties & thefts. Use Form 4684, 
+- Casualties & Thefts. You may also have to use Form 4797
 
 ## Gross Receipts
 
 1. Definition: Total income received from all sources(sales, interest, etc) before any expenses are deducted.
 2. Types of Gross Receipts:
-   - Sales of Products or Services: Includes cash, checks, credit card payments, and the fair market value of property or services received.
-   - Sales Returns and Allowances: Reductions in sales for returned goods or allowances for damaged goods.
+   - Sales of Products or Services: Includes cash, checks, credit card payments, & the fair market value of property or services received.
+   - Sales Returns & Allowances: Reductions in sales for returned goods or allowances for damaged goods.
    - Cancellations of Debt: Certain types of debt forgiveness may be considered income.
 3. Bartering Income:
    - Definition: Exchange of goods or services without money, which must be included in gross receipts.
@@ -34,17 +34,17 @@ See Publications (for more detail)
    - Beginning Inventory: Value of inventory at the start of the year.
    - Purchases: Cost of inventory bought during the year.
    - Labor Costs: Wages paid to workers directly involved in producing goods.
-   - Materials and Supplies: Costs for items used in the manufacturing process.
+   - Materials & Supplies: Costs for items used in the manufacturing process.
    - Ending Inventory: Value of inventory at the end of the year.
    - Formula:  See: [Financial formulas](https://mcc-us.github.io/bookkeeping/2023-12-24-Financial-Ratios.html)
-$$COGS = Beginning Inventory + Purchases + Labor Costs + Materials and Supplies - Ending Inventory$$
+$$COGS = Beginning Inventory + Purchases + Labor Costs + Materials & Supplies - Ending Inventory$$
 1. Impact on Gross Income:
    - COGS is subtracted from gross receipts to determine gross profit.
 
 ## Other Income
 
 1. Types of Other Income:
-   - Interest and Dividends: Income from investments.
+   - Interest & Dividends: Income from investments.
    - Rents: Income from leasing property.
    - Royalties: Income from intellectual property.
    - Bad Debts Recovered: Money received from debts that were previously written off as uncollectible.
@@ -53,14 +53,14 @@ $$COGS = Beginning Inventory + Purchases + Labor Costs + Materials and Supplies 
 
 ## Income from Personal Services
 
-1. Definition: Earnings from work performed, including fees, wages, and other compensation.
+1. Definition: Earnings from work performed, including fees, wages, & other compensation.
 2. Reporting Personal Services Income:
-   - Must include all forms of compensation, including cash and the fair market value of goods or services received in exchange for personal services.
+   - Must include all forms of compensation, including cash & the fair market value of goods or services received in exchange for personal services.
 
 ## Non-Taxable Income
 
 1. Types of Non-Taxable Income:
-   - Gifts and Inheritances: Generally not taxable.
+   - Gifts & Inheritances: Generally not taxable.
    - Life Insurance Proceeds: Excluded from income in most cases.
    - Certain Fringe Benefits: Some employer-provided benefits are non-taxable.
 2. Exclusions: Specific rules govern the exclusion of certain types of income from taxation.
@@ -73,7 +73,7 @@ $$COGS = Beginning Inventory + Purchases + Labor Costs + Materials and Supplies 
    - Answer: The fair market value of the goods or services received.
 
 2. How is Cost of Goods Sold (COGS) calculated?
-   - Answer: COGS = Beginning Inventory + Purchases + Labor Costs + Materials and Supplies - Ending Inventory.
+   - Answer: COGS = Beginning Inventory + Purchases + Labor Costs + Materials & Supplies - Ending Inventory.
 
 3. Which type of income is generally not taxable?
-   - Answer: Gifts and inheritances are generally not taxable.
+   - Answer: Gifts & inheritances are generally not taxable.
