--- a/_posts/p334.chapter.04.md
+++ b/_posts/p334.chapter.04.md
@@ -7,21 +7,21 @@ title: p334.chapter.4.pdf
 
 - Discusses various types of business deductions from gross income to determine taxable income.
 
-Form (and Instructions) - 3800 General Business Credit, 6251 Alternative Minimum Tax—Individuals
+Form (& Instructions) - 3800 General Business Credit, 6251 Alternative Minimum Tax—Individuals
 
 ## Business Expenses
 
-1. Definition: Ordinary and necessary costs of carrying on a trade or business.
-2. Ordinary Expense: Common and accepted in your trade or business.
-3. Necessary Expense: Helpful and appropriate for your business, though not necessarily indispensable.
+1. Definition: Ordinary & necessary costs of carrying on a trade or business.
+2. Ordinary Expense: Common & accepted in your trade or business.
+3. Necessary Expense: Helpful & appropriate for your business, though not necessarily indispensable.
 
 ## Cost of Goods Sold (COGS)
 
 1. Definition: Direct costs of producing the goods sold by your business.
 2. Components of COGS:
-   - Inventory Costs: Cost of materials and supplies used in production.
+   - Inventory Costs: Cost of materials & supplies used in production.
    - Labor Costs: Wages paid to workers directly involved in production.
-   - Overhead: Costs indirectly tied to production, such as utilities and rent.
+   - Overhead: Costs indirectly tied to production, such as utilities & rent.
 
 ## Capital Expenses
 
@@ -29,21 +29,21 @@ Form (and Instructions) - 3800 General Business Credit, 6251 Alternative Minimum
 2. Types of Capital Expenses:
    - Business Start-Up Costs: Expenses incurred before the business begins operation.
    - Improvements: Costs to increase the value or extend the life of business property.
-   - Assets: Purchases such as buildings, machinery, and equipment.
+   - Assets: Purchases such as buildings, machinery, & equipment.
 
 ## Personal versus Business Expenses
 
 1. Mixed-Use Property:
-   - Expenses related to property used for both personal and business purposes must be divided based on the proportion of business use.
+   - Expenses related to property used for both personal & business purposes must be divided based on the proportion of business use.
 2. Non-Deductible Personal Expenses:
    - Personal living or family expenses are not deductible as business expenses.
 
 ## Business Use of Your Home
 
 1. Eligibility Requirements:
-   - Part of your home must be used regularly and exclusively for business.
+   - Part of your home must be used regularly & exclusively for business.
 2. Deductible Expenses:
-   - Includes mortgage interest, rent, utilities, repairs, and depreciation related to the business portion of your home.
+   - Includes mortgage interest, rent, utilities, repairs, & depreciation related to the business portion of your home.
 3. Simplified Option:
    - Allows a standard deduction of $5 per square foot of business use, up to 300 square feet.
 
@@ -53,16 +53,16 @@ Form (and Instructions) - 3800 General Business Credit, 6251 Alternative Minimum
    - Deduct a fixed rate for each mile driven for business purposes.
    - 65.5 cents a mile
 2. Actual Expense Method:
-   - Deduct the actual expenses of operating the vehicle, including gas, oil, insurance, repairs, and depreciation.
+   - Deduct the actual expenses of operating the vehicle, including gas, oil, insurance, repairs, & depreciation.
 
 ## Employee Pay
 
-1. Wages and Salaries:
+1. Wages & Salaries:
    - Amounts paid for services performed by employees.
-2. Bonuses and Commissions:
+2. Bonuses & Commissions:
    - Additional compensation provided to employees.
 3. Employee Benefit Programs:
-   - Costs for programs such as health insurance, retirement plans, and education assistance.
+   - Costs for programs such as health insurance, retirement plans, & education assistance.
 
 ## Rent Expense
 
@@ -74,22 +74,22 @@ Form (and Instructions) - 3800 General Business Credit, 6251 Alternative Minimum
 ## Interest
 
 1. Types of Deductible Interest:
-   - Interest on loans used for business purposes, including mortgages and business loans.
+   - Interest on loans used for business purposes, including mortgages & business loans.
 2. Limitations:
    - Interest related to personal expenses or for tax-exempt income is not deductible.
 
 ## Taxes
 
 1. Deductible Taxes:
-   - State, local, and foreign taxes related to business operations.
-   - Employment taxes, including social security and Medicare taxes, paid on behalf of employees.
+   - State, local, & foreign taxes related to business operations.
+   - Employment taxes, including social security & Medicare taxes, paid on behalf of employees.
 2. Non-Deductible Taxes:
-   - Federal income taxes and penalties are not deductible.
+   - Federal income taxes & penalties are not deductible.
 
 ## Insurance
 
 1. Deductible Insurance Premiums:
-   - Insurance that is ordinary and necessary for your business, including liability, malpractice, and workers' compensation insurance.
+   - Insurance that is ordinary & necessary for your business, including liability, malpractice, & workers' compensation insurance.
 2. Life Insurance Premiums:
    - Premiums for life insurance where you are directly or indirectly the beneficiary are not deductible.
 
@@ -98,7 +98,7 @@ Form (and Instructions) - 3800 General Business Credit, 6251 Alternative Minimum
 # Chapter 4 Quiz Questions
 
 1. What criteria must be met for a business expense to be deductible?
-   - Answer: The expense must be both ordinary and necessary for the business.
+   - Answer: The expense must be both ordinary & necessary for the business.
 
 2. What is the simplified option for the home office deduction?
    - Answer: The simplified option allows a standard deduction of $5 per square foot of business use, up to 300 square feet.
