--- a/_posts/p334.chapter.06.md
+++ b/_posts/p334.chapter.06.md
@@ -14,8 +14,8 @@ $$Gross Profit = Net Sales - Cost of Goods Sold.$$
 
 ## Net Sales
 
-1. Definition: Total sales minus returns, allowances, and discounts.
-2. Sales Returns and Allowances:
+1. Definition: Total sales minus returns, allowances, & discounts.
+2. Sales Returns & Allowances:
    - Sales Returns: Products returned by customers.
    - Allowances: Reductions in the selling price due to defects or issues with the goods sold.
 3. Sales Discounts:
@@ -27,10 +27,10 @@ $$Gross Profit = Net Sales - Cost of Goods Sold.$$
    - Beginning Inventory: Value of inventory at the start of the year.
    - Purchases: Cost of goods bought during the year for resale.
    - Labor Costs: Direct wages paid to workers involved in production.
-   - Materials and Supplies: Costs for raw materials used in manufacturing.
+   - Materials & Supplies: Costs for raw materials used in manufacturing.
    - Ending Inventory: Value of inventory at the end of the year.
 2. Calculating COGS:
-   - COGS = Beginning Inventory + Purchases + Labor Costs + Materials and Supplies - Ending Inventory.
+   - COGS = Beginning Inventory + Purchases + Labor Costs + Materials & Supplies - Ending Inventory.
    - This calculation is critical for accurately determining gross profit.
 
 ## Gross Profit Margin
@@ -41,8 +41,8 @@ $$Gross Profit = Net Sales - Cost of Goods Sold.$$
 
 ## Example of Figuring Gross Profit
 
-1. Illustrative Example: Provides a step-by-step calculation of gross profit, including adjustments for returns, allowances, and discounts.
-2. Application: Demonstrates how to apply the gross profit formula and calculate the gross profit margin.
+1. Illustrative Example: Provides a step-by-step calculation of gross profit, including adjustments for returns, allowances, & discounts.
+2. Application: Demonstrates how to apply the gross profit formula & calculate the gross profit margin.
 
 ---
 
@@ -55,4 +55,4 @@ $$Gross Profit = Net Sales - Cost of Goods Sold.$$
    - Answer: Gross Profit Margin = (Gross Profit / Net Sales) * 100.
 
 3. Which components are subtracted from total sales to determine net sales?
-   - Answer: Sales returns, allowances, and discounts are subtracted from total sales to determine net sales.
+   - Answer: Sales returns, allowances, & discounts are subtracted from total sales to determine net sales.
