--- a/_posts/p334.chapter.07.md
+++ b/_posts/p334.chapter.07.md
@@ -5,20 +5,20 @@ title: p334.chapter.7.pdf
 
 # Chapter 7: Sales
 
-- How to report sales income, including sales of goods and services, and the tax treatment of different types of sales.
+- How to report sales income, including sales of goods & services, & the tax treatment of different types of sales.
 
-## Sales of Goods and Services
+## Sales of Goods & Services
 
 1. Reporting Sales: Sales income must be reported on your tax return, typically on Schedule C for sole proprietors.
 2. Types of Sales Income:
    - Sales of Goods: Income from selling physical products.
    - Sales of Services: Income from providing services rather than physical products.
 
-## Sales Returns and Allowances
+## Sales Returns & Allowances
 
 1. Definition: Reductions in sales revenue due to returned goods or allowances granted to customers.
 2. Accounting for Returns: Must be deducted from gross receipts to determine net sales.
-3. Recording Sales Returns: Ensure that returns and allowances are accurately recorded to reflect the true income of the business.
+3. Recording Sales Returns: Ensure that returns & allowances are accurately recorded to reflect the true income of the business.
 
 ## Installment Sales
 
@@ -35,20 +35,20 @@ title: p334.chapter.7.pdf
    - Definition: Sales made to related parties, such as family members or related businesses.
    - Tax Treatment: Special rules apply to prevent tax avoidance through related party sales.
 2. Depreciable Property:
-   - Definition: Property that loses value over time and for which depreciation has been claimed.
+   - Definition: Property that loses value over time & for which depreciation has been claimed.
    - Recapture of Depreciation: If sold, the depreciation previously claimed must be recaptured as income.
-   - Form to Use: Report the sale and depreciation recapture on Form 4797, Sales of Business Property.
+   - Form to Use: Report the sale & depreciation recapture on Form 4797, Sales of Business Property.
 
 ## Reporting Sales
 
-1. Form 1040, Schedule C: Report sales income, returns, and allowances on Schedule C.
-2. Form 8949 and Schedule D: Use these forms to report sales of capital assets.
-3. Form 4797: Report sales of business property and recapture of depreciation.
+1. Form 1040, Schedule C: Report sales income, returns, & allowances on Schedule C.
+2. Form 8949 & Schedule D: Use these forms to report sales of capital assets.
+3. Form 4797: Report sales of business property & recapture of depreciation.
 
 ## Example of Sales Reporting
 
-1. Illustrative Example: Provides a detailed example of how to report sales income, including installment sales, related party sales, and sales of depreciable property.
-2. Application: Demonstrates the correct forms and calculations to use when reporting various types of sales.
+1. Illustrative Example: Provides a detailed example of how to report sales income, including installment sales, related party sales, & sales of depreciable property.
+2. Application: Demonstrates the correct forms & calculations to use when reporting various types of sales.
 
 ---
 
@@ -61,4 +61,4 @@ title: p334.chapter.7.pdf
    - Answer: The depreciation previously claimed must be recaptured as income, reported on Form 4797.
 
 3. What is deducted from gross receipts to determine net sales?
-   - Answer: Sales returns and allowances are deducted from gross receipts to determine net sales.
+   - Answer: Sales returns & allowances are deducted from gross receipts to determine net sales.
