--- a/_posts/p334.chapter.09.md
+++ b/_posts/p334.chapter.09.md
@@ -9,22 +9,22 @@ title: p334.chapter.9.pdf
 
 ## Basis of Property
 
-1. Definition: The amount of your investment in property for tax purposes, which is used to calculate depreciation, amortization, and gain or loss on disposition.
+1. Definition: The amount of your investment in property for tax purposes, which is used to calculate depreciation, amortization, & gain or loss on disposition.
 2. Original Basis:
-   - Purchased Property: Generally, the cost of the property plus any amounts paid for improvements and expenses related to the purchase.
+   - Purchased Property: Generally, the cost of the property plus any amounts paid for improvements & expenses related to the purchase.
    - Inherited Property: Generally, the fair market value (FMV) of the property on the date of the decedent's death.
    - Gifted Property: Generally, the donor's adjusted basis at the time of the gift, with some adjustments.
 3. Adjusted Basis:
-   - Increases to Basis: Include the cost of improvements, legal fees, and certain assessments.
-   - Decreases to Basis: Include depreciation, casualty and theft losses, and certain credits and deductions.
+   - Increases to Basis: Include the cost of improvements, legal fees, & certain assessments.
+   - Decreases to Basis: Include depreciation, casualty & theft losses, & certain credits & deductions.
 
 ## Cost Basis
 
 1. Cost Basis of Purchased Property:
-   - Includes: Purchase price, sales tax, freight, installation, and other costs associated with acquiring the property.
+   - Includes: Purchase price, sales tax, freight, installation, & other costs associated with acquiring the property.
    - Excludes: Financing costs such as interest on loans.
 2. Special Rules:
-   - Real Property: Costs of buildings and land should be allocated separately.
+   - Real Property: Costs of buildings & land should be allocated separately.
    - Business Start-Up Costs: Certain start-up costs can be added to the basis of the property.
 
 ## Basis Other than Cost
@@ -45,21 +45,21 @@ title: p334.chapter.9.pdf
    - Assessments: Government assessments for local improvements.
    - Restoration Costs: Costs to restore property after a casualty loss.
 2. Decreases to Basis:
-   - Depreciation: Deduction for wear and tear, deterioration, or obsolescence.
-   - Casualty and Theft Losses: Losses deducted from the basis after an event that damages or destroys the property.
-   - Exclusions, Credits, and Rebates: Various tax benefits that reduce the basis.
+   - Depreciation: Deduction for wear & tear, deterioration, or obsolescence.
+   - Casualty & Theft Losses: Losses deducted from the basis after an event that damages or destroys the property.
+   - Exclusions, Credits, & Rebates: Various tax benefits that reduce the basis.
 
 ## Basis of Certain Assets
 
 1. Real Property:
-   - Land and Buildings: Basis must be allocated between the land and the buildings; land cannot be depreciated.
+   - Land & Buildings: Basis must be allocated between the land & the buildings; land cannot be depreciated.
    - Easements: The sale of an easement reduces the basis of the affected property.
 2. Business Assets:
    - Inventory: The basis is generally the cost of the inventory items.
    - Depreciable Property: The basis is the cost minus any depreciation claimed.
 3. Intangible Assets:
    - Goodwill: If acquired as part of a business purchase, the basis is the purchase price allocated to goodwill.
-   - Patents and Copyrights: The basis is generally the cost to create or purchase the patent or copyright.
+   - Patents & Copyrights: The basis is generally the cost to create or purchase the patent or copyright.
 
 ## Basis in Special Situations
 
@@ -68,11 +68,11 @@ title: p334.chapter.9.pdf
 2. Partnership Interests:
    - The basis is the amount of money contributed to the partnership, plus the partner's share of partnership liabilities.
 3. S Corporation Stock:
-   - The basis is the original cost of the stock, adjusted for items such as income, losses, and distributions.
+   - The basis is the original cost of the stock, adjusted for items such as income, losses, & distributions.
 
 ## Example of Basis Calculation
 
-1. Illustrative Example: Provides a detailed example showing how to calculate the basis of property, including adjustments for improvements, depreciation, and casualty losses.
+1. Illustrative Example: Provides a detailed example showing how to calculate the basis of property, including adjustments for improvements, depreciation, & casualty losses.
 
 ---
 
@@ -82,7 +82,7 @@ title: p334.chapter.9.pdf
    - Answer: The basis of inherited property is generally the fair market value (FMV) on the date of the decedent's death.
 
 2. What adjustments can increase the basis of property?
-   - Answer: The basis of property can be increased by improvements, government assessments, and restoration costs.
+   - Answer: The basis of property can be increased by improvements, government assessments, & restoration costs.
 
 3. What is the basis of property converted from personal to business use?
    - Answer: The basis of property converted from personal to business use is the lesser of the FMV at the time of conversion or the adjusted basis of the property.
