--- a/_posts/p334.chapter.10.md
+++ b/_posts/p334.chapter.10.md
@@ -5,33 +5,33 @@ title: p334.chapter.10.pdf
 
 # Chapter 10: Depreciation
 
-- Discusses how to calculate the depreciation deduction for property used in a trade or business, including different methods and special rules.
+- Discusses how to calculate the depreciation deduction for property used in a trade or business, including different methods & special rules.
 
 ## What Property Can Be Depreciated?
 
 1. Depreciable Property:
    - Definition: Property used in a trade or business or held for the production of income that has a determinable useful life of more than one year.
 2. Types of Depreciable Property:
-   - Tangible Property: Includes buildings, machinery, vehicles, furniture, and equipment.
-   - Intangible Property: Includes patents, copyrights, and computer software.
+   - Tangible Property: Includes buildings, machinery, vehicles, furniture, & equipment.
+   - Intangible Property: Includes patents, copyrights, & computer software.
 3. Non-Depreciable Property:
-   - Examples: Land, inventories, and property placed in service and disposed of in the same year.
+   - Examples: Land, inventories, & property placed in service & disposed of in the same year.
 
-## When Does Depreciation Begin and End?
+## When Does Depreciation Begin & End?
 
 1. Placed in Service:
-   - Depreciation begins when the property is placed in service, i.e., when it is ready and available for a specific use.
+   - Depreciation begins when the property is placed in service, i.e., when it is ready & available for a specific use.
 2. Depreciation Ends:
    - Depreciation ends when you have fully recovered your cost or other basis or when you retire the property from service, whichever comes first.
 
 ## Modified Accelerated Cost Recovery System (MACRS)
 
-1. Definition: The system used to depreciate most business and investment property placed in service after 1986.
+1. Definition: The system used to depreciate most business & investment property placed in service after 1986.
 2. MACRS Methods:
    - General Depreciation System (GDS): The most commonly used MACRS method, providing a faster write-off of the property.
    - Alternative Depreciation System (ADS): A slower method that must be used for certain property.
 3. Property Classes:
-   - 3-year, 5-year, 7-year, 10-year, 15-year, 20-year: Based on the type of property and how it is used.
+   - 3-year, 5-year, 7-year, 10-year, 15-year, 20-year: Based on the type of property & how it is used.
 4. Depreciation Conventions:
    - Half-Year Convention: Assumes property is placed in service in the middle of the year.
    - Mid-Quarter Convention: Applies if more than 40% of the property is placed in service in the last quarter of the year.
@@ -40,12 +40,12 @@ title: p334.chapter.10.pdf
 ## Section 179 Deduction
 
 1. Overview:
-   - Allows businesses to deduct the full purchase price of qualifying equipment and software purchased or financed during the tax year.
+   - Allows businesses to deduct the full purchase price of qualifying equipment & software purchased or financed during the tax year.
 2. Limits:
    - Dollar Limit: The maximum amount you can deduct is subject to an annual limit, adjusted for inflation.
    - Investment Limit: If the total cost of qualifying property exceeds a certain amount, the Section 179 deduction is reduced dollar for dollar.
 3. Qualifying Property:
-   - Tangible Personal Property: Includes machinery, equipment, and vehicles used in a trade or business.
+   - Tangible Personal Property: Includes machinery, equipment, & vehicles used in a trade or business.
    - Off-the-Shelf Software: Software that is readily available for purchase by the general public.
 
 ## Special Depreciation Allowance (Bonus Depreciation)
@@ -56,9 +56,9 @@ title: p334.chapter.10.pdf
 
 ## Listed Property
 
-1. Definition: Includes assets that can be used for both business and personal purposes, such as cars, computers, and cameras.
+1. Definition: Includes assets that can be used for both business & personal purposes, such as cars, computers, & cameras.
 2. Special Rules:
-   - Business Use Requirement: Must be used more than 50% for business to qualify for accelerated depreciation and Section 179.
+   - Business Use Requirement: Must be used more than 50% for business to qualify for accelerated depreciation & Section 179.
    - Recordkeeping Requirements: Detailed records must be kept to substantiate the business use of listed property.
 
 ## Amortization of Intangible Property
@@ -66,13 +66,13 @@ title: p334.chapter.10.pdf
 1. Definition: Deducting the cost of certain intangible property over a fixed period.
 2. Types of Amortizable Intangibles:
    - Goodwill: Deductible over 15 years.
-   - Patents and Copyrights: Deductible over the useful life of the property.
+   - Patents & Copyrights: Deductible over the useful life of the property.
 3. Amortization Method: Typically straight-line over the useful life of the intangible property.
 
 ## Depreciation Recapture
 
 1. Definition: When depreciable property is sold at a gain, part or all of the gain may be taxed as ordinary income, up to the amount of depreciation previously claimed.
-2. Section 1245 Property: Applies to tangible personal property, such as equipment and vehicles.
+2. Section 1245 Property: Applies to tangible personal property, such as equipment & vehicles.
 3. Section 1250 Property: Applies to depreciable real property, such as buildings, but only for depreciation in excess of straight-line depreciation.
 
 ---
@@ -80,10 +80,10 @@ title: p334.chapter.10.pdf
 # Chapter 10 Quiz Questions
 
 1. What is the Modified Accelerated Cost Recovery System (MACRS)?
-   - Answer: MACRS is the system used to depreciate most business and investment property placed in service after 1986, with methods like GDS and ADS.
+   - Answer: MACRS is the system used to depreciate most business & investment property placed in service after 1986, with methods like GDS & ADS.
 
 2. What is the Section 179 deduction?
-   - Answer: The Section 179 deduction allows businesses to deduct the full purchase price of qualifying equipment and software up to an annual limit.
+   - Answer: The Section 179 deduction allows businesses to deduct the full purchase price of qualifying equipment & software up to an annual limit.
 
 3. When does depreciation recapture occur?
-   - Answer: Depreciation recapture occurs when depreciable property is sold at a gain, and part or all of the gain may be taxed as ordinary income up to the amount of depreciation previously claimed.
+   - Answer: Depreciation recapture occurs when depreciable property is sold at a gain, & part or all of the gain may be taxed as ordinary income up to the amount of depreciation previously claimed.
