--- a/_posts/p334.chapter.12.md
+++ b/_posts/p334.chapter.12.md
@@ -7,23 +7,23 @@ title: p334.chapter.12.pdf
 
 ## Introduction
 
-- Provides detailed guidance on how to determine and calculate the deduction for the business use of your home, commonly known as the home office deduction.
+- Provides detailed guidance on how to determine & calculate the deduction for the business use of your home, commonly known as the home office deduction.
 
 ## Qualifying for a Deduction
 
 1. Exclusive Use Requirement:
-   - Part of your home must be used exclusively and regularly for conducting business to qualify for the deduction.
+   - Part of your home must be used exclusively & regularly for conducting business to qualify for the deduction.
 2. Principal Place of Business:
    - Your home must be the principal place of business, or a place where you regularly meet clients or customers.
 3. Separate Structure:
-   - The deduction may also apply to a separate structure not attached to your home, such as a studio, garage, or barn, used exclusively and regularly for business.
+   - The deduction may also apply to a separate structure not attached to your home, such as a studio, garage, or barn, used exclusively & regularly for business.
 
 ## Types of Deductible Expenses
 
 1. Direct Expenses:
    - Expenses only for the business part of your home, such as painting or repairs in the area used for business, which are fully deductible.
 2. Indirect Expenses:
-   - Expenses for keeping up and running your entire home, such as insurance, utilities, and general repairs, which are deductible based on the percentage of your home used for business.
+   - Expenses for keeping up & running your entire home, such as insurance, utilities, & general repairs, which are deductible based on the percentage of your home used for business.
 3. Unrelated Expenses:
    - Expenses for parts of your home not used for business, such as lawn care or painting a room not used for business, are not deductible.
 
@@ -35,7 +35,7 @@ title: p334.chapter.12.pdf
    - Calculate the percentage of your home used for business by dividing the area used for business by the total area of your home.
    - Apply this percentage to indirect expenses to determine the deductible amount.
 3. Example Calculation:
-   - Provides a step-by-step example of how to calculate the home office deduction using both the simplified and regular methods.
+   - Provides a step-by-step example of how to calculate the home office deduction using both the simplified & regular methods.
 
 ## Limits on the Deduction
 
@@ -47,16 +47,16 @@ title: p334.chapter.12.pdf
 ## Deduction for Employees
 
 1. Eligibility: 
-   - The home office deduction is generally not available for employees unless the use of the home office is for the convenience of the employer and is required as a condition of employment.
+   - The home office deduction is generally not available for employees unless the use of the home office is for the convenience of the employer & is required as a condition of employment.
 2. Employee Business Expenses:
-   - Deductible employee expenses are limited and subject to the 2% of adjusted gross income (AGI) floor.
+   - Deductible employee expenses are limited & subject to the 2% of adjusted gross income (AGI) floor.
 
 ## Recordkeeping Requirements
 
 1. Importance of Records:
-   - Keep accurate records of all expenses related to the business use of your home, including receipts, canceled checks, and other documents that support your deduction.
+   - Keep accurate records of all expenses related to the business use of your home, including receipts, canceled checks, & other documents that support your deduction.
 2. Examples of Records:
-   - Utility bills, mortgage interest statements, insurance statements, and property tax records.
+   - Utility bills, mortgage interest statements, insurance statements, & property tax records.
 
 ---
 
@@ -66,7 +66,7 @@ title: p334.chapter.12.pdf
    - Answer: The maximum home office deduction using the simplified method is $1,500.
 
 2. Can expenses for a separate structure not attached to your home be deducted?
-   - Answer: Yes, expenses for a separate structure not attached to your home, used exclusively and regularly for business, can be deducted.
+   - Answer: Yes, expenses for a separate structure not attached to your home, used exclusively & regularly for business, can be deducted.
 
 3. What is required for employees to qualify for the home office deduction?
-   - Answer: Employees must use the home office for the convenience of the employer and it must be a condition of employment to qualify for the home office deduction.
+   - Answer: Employees must use the home office for the convenience of the employer & it must be a condition of employment to qualify for the home office deduction.
