--- a/_posts/p334.chapter.02.md
+++ b/_posts/p334.chapter.02.md
@@ -3,11 +3,11 @@ layout: post
 title: p334.chapter.2.pdf
 --- 
 
-# Chapter 2: Accounting Periods and Methods
+# Chapter 2: Accounting Periods & Methods
 
-- Discusses the selection and use of an accounting period and an accounting method for your business.
+- Discusses the selection & use of an accounting period & an accounting method for your business.
 
-- See: [Publication 538 Accounting Periods and Methods]()
+- See: [Publication 538 Accounting Periods & Methods]()
 - <button onclick="buttonFunc()">IRS forms</button>
 <script>
 function buttonFunc() { window.open("https://www.irs.gov/forms-pubs"); }
@@ -24,7 +24,7 @@ function buttonFunc() { window.open("https://www.irs.gov/forms-pubs"); }
 
 ## Accounting Methods
 
-1. Definition: A set of rules used to determine when and how to report income and expenses.
+1. Definition: A set of rules used to determine when & how to report income & expenses.
 2. Types of Accounting Methods:
    - Cash Method:
      - Income is reported in the year it is received.
@@ -33,14 +33,14 @@ function buttonFunc() { window.open("https://www.irs.gov/forms-pubs"); }
      - Income is reported in the year it is earned, regardless of when it is received.
      - Expenses are deducted in the year they are incurred, regardless of when they are paid.
    - Special Methods:
-     - Combination of cash and accrual methods, with special rules applying to certain types of income and expenses.
+     - Combination of cash & accrual methods, with special rules applying to certain types of income & expenses.
 3. Changing Your Accounting Method: Requires filing 
    1. Form 3115, Application for Change in Accounting Method 
    2. Automatic consent procedures are available for some changes, eliminating the need for IRS approval.
 
 ## Inventories
 
-1. Requirement to Use: If your business holds inventory, you generally must use accrual accounting for purchases and sales.
+1. Requirement to Use: If your business holds inventory, you generally must use accrual accounting for purchases & sales.
 2. Valuing Inventory:
    - Cost Method: Based on the cost of items in inventory at time of purchase
    - Lower of Cost or Market (LCM) Method: Inventory is valued at the lower of its cost or market value.
@@ -48,15 +48,15 @@ function buttonFunc() { window.open("https://www.irs.gov/forms-pubs"); }
 
 ## Material Participation
 
-1. Definition: Involvement in the operation of your business to a degree that is regular, continuous, and substantial.
-2. Passive Activity Rules: If you do not materially participate, your business income may be classified as passive, subject to special rules and limitations.
+1. Definition: Involvement in the operation of your business to a degree that is regular, continuous, & substantial.
+2. Passive Activity Rules: If you do not materially participate, your business income may be classified as passive, subject to special rules & limitations.
 
 ---
 
 # Chapter 2 Quiz Questions
 
-1. What is the main difference between the cash method and the accrual method of accounting?
-   - Answer: The cash method reports income and expenses when received or paid, while the accrual method reports income and expenses when earned or incurred.
+1. What is the main difference between the cash method & the accrual method of accounting?
+   - Answer: The cash method reports income & expenses when received or paid, while the accrual method reports income & expenses when earned or incurred.
 
 2. Which form must be filed to request a change in your accounting method?
    - Answer: Form 3115, Application for Change in Accounting Method.
