--- a/_posts/p334.chapter.05.md
+++ b/_posts/p334.chapter.05.md
@@ -5,25 +5,25 @@ title: p334.chapter.5.pdf
 
 # Chapter 5: Net Operating Losses (NOLs)
 
-- Explains Net Operating Loss (NOL), how it is calculated, and how it can be used to reduce taxable income in other years.
+- Explains Net Operating Loss (NOL), how it is calculated, & how it can be used to reduce taxable income in other years.
 
 ## What is a Net Operating Loss?
 
 1. Definition: Occurs when a business's allowable tax deductions exceed its gross income.
-2. Sources of NOL: Can arise from operating losses, casualty and theft losses, and certain other deductions.
-3. Non-Deductible Items: Capital losses, personal exemptions, and nonbusiness deductions are generally not included in calculating an NOL.
+2. Sources of NOL: Can arise from operating losses, casualty & theft losses, & certain other deductions.
+3. Non-Deductible Items: Capital losses, personal exemptions, & nonbusiness deductions are generally not included in calculating an NOL.
 
-## Carrybacks and Carryforwards
+## Carrybacks & Carryforwards
 
 1. Carryforward: An NOL can be carried forward to future tax years to offset income.
-2. Carryback: Before the Tax Cuts and Jobs Act (TCJA), NOLs could be carried back to prior years to claim a refund. Post-TCJA, carrybacks are generally not allowed.
-3. Election to Waive Carryback: Taxpayers may elect to waive the carryback period and only carry the NOL forward.
+2. Carryback: Before the Tax Cuts & Jobs Act (TCJA), NOLs could be carried back to prior years to claim a refund. Post-TCJA, carrybacks are generally not allowed.
+3. Election to Waive Carryback: Taxpayers may elect to waive the carryback period & only carry the NOL forward.
 
 ## Figuring an NOL
 
 1. Calculating NOL:  
    - Start with taxable income before exemptions.
-   - Subtract nonbusiness income and add nonbusiness deductions.
+   - Subtract nonbusiness income & add nonbusiness deductions.
    - Adjust for NOL deductions from prior years.
 2. Adjustments to Income: Certain adjustments, like nonbusiness deductions, may need to be made to the income to figure the NOL.
 
@@ -34,7 +34,7 @@ title: p334.chapter.5.pdf
 
 ## Example of an NOL
 
-1. Illustrative Example: Provides a detailed example of how an NOL is calculated, including adjustments and the steps to carry it forward or back.
+1. Illustrative Example: Provides a detailed example of how an NOL is calculated, including adjustments & the steps to carry it forward or back.
 2. NOL Deduction in Future Years: Explains how the NOL deduction reduces income in subsequent years.
 
 ---
@@ -45,7 +45,7 @@ title: p334.chapter.5.pdf
    - Answer: An NOL occurs when a business's allowable tax deductions exceed its gross income.
 
 2. Can NOLs still be carried back to prior years under the current tax law?
-   - Answer: Generally, NOLs cannot be carried back under the current tax law due to changes made by the Tax Cuts and Jobs Act (TCJA).
+   - Answer: Generally, NOLs cannot be carried back under the current tax law due to changes made by the Tax Cuts & Jobs Act (TCJA).
 
 3. Which form is used to claim an NOL deduction?
    - Answer: Use Schedule A of Form 1045 or Form 1040 to claim an NOL deduction.
