--- a/_posts/p334.chapter.08.md
+++ b/_posts/p334.chapter.08.md
@@ -13,28 +13,28 @@ title: p334.chapter.8.pdf
 
 1. Sales: Transfer of property for money or other compensation.
 2. Exchanges: Swapping one property for another, often involving like-kind exchanges.
-3. Involuntary Conversions: Property is destroyed, stolen, or condemned, and insurance or other compensation is received.
+3. Involuntary Conversions: Property is destroyed, stolen, or condemned, & insurance or other compensation is received.
 4. Abandonments: Voluntarily giving up ownership of property without receiving any payment.
-5. Foreclosures and Repossessions: Property is taken back by the lender due to nonpayment of a debt.
+5. Foreclosures & Repossessions: Property is taken back by the lender due to nonpayment of a debt.
 
 ## Calculating Gain or Loss
 
-1. Amount Realized: The total amount received from the disposition of the property, including cash, fair market value of other property, and any liabilities assumed by the buyer.
-2. Adjusted Basis: The original cost of the property, plus improvements, minus depreciation and other deductions.
+1. Amount Realized: The total amount received from the disposition of the property, including cash, fair market value of other property, & any liabilities assumed by the buyer.
+2. Adjusted Basis: The original cost of the property, plus improvements, minus depreciation & other deductions.
 3. Gain or Loss Formula: Gain or Loss = Amount Realized - Adjusted Basis.
-4. Reporting Gain or Loss: Gains or losses must be reported on tax forms, depending on the type of property and disposition.
+4. Reporting Gain or Loss: Gains or losses must be reported on tax forms, depending on the type of property & disposition.
 
 ## Section 1231 Property
 
-1. Definition: Depreciable property and real estate used in a trade or business, held for more than one year.
-2. Tax Treatment of Gains and Losses:
+1. Definition: Depreciable property & real estate used in a trade or business, held for more than one year.
+2. Tax Treatment of Gains & Losses:
    - Net Gains: Generally treated as long-term capital gains, which may be taxed at a lower rate.
    - Net Losses: Treated as ordinary losses, which can be deducted against other income.
 
-## Section 1245 and 1250 Property
+## Section 1245 & 1250 Property
 
 1. Section 1245 Property:
-   - Definition: Depreciable personal property, such as machinery and equipment.
+   - Definition: Depreciable personal property, such as machinery & equipment.
    - Depreciation Recapture: Any gain on the sale of Section 1245 property is treated as ordinary income to the extent of depreciation previously claimed.
 2. Section 1250 Property:
    - Definition: Depreciable real property, such as buildings.
@@ -44,7 +44,7 @@ title: p334.chapter.8.pdf
 
 1. Definition: Sale of business property where at least one payment is received after the tax year of the sale.
 2. Reporting Installment Sales:
-   - Form 6252: Used to report installment sales and determine the portion of each payment that is taxable.
+   - Form 6252: Used to report installment sales & determine the portion of each payment that is taxable.
    - Interest: Any interest received on installment payments must be reported as ordinary income.
 
 ## Like-Kind Exchanges
@@ -52,7 +52,7 @@ title: p334.chapter.8.pdf
 1. Definition: Exchange of business or investment property for another property of like kind.
 2. Tax Deferral: Gains on like-kind exchanges are generally deferred until the new property is sold.
 3. Reporting Like-Kind Exchanges:
-   - Form 8824: Used to report like-kind exchanges and calculate any potential taxable gain.
+   - Form 8824: Used to report like-kind exchanges & calculate any potential taxable gain.
 
 ## Involuntary Conversions
 
@@ -60,12 +60,12 @@ title: p334.chapter.8.pdf
 2. Tax Treatment: If the insurance or other compensation received is less than the adjusted basis, a loss is recognized. If it exceeds the adjusted basis, a gain is recognized.
 3. Replacement Property: If replacement property is acquired within a certain period, the gain can be deferred.
 
-## Foreclosures and Repossessions
+## Foreclosures & Repossessions
 
 1. Definition: Occurs when property is taken back by the lender due to nonpayment of a debt.
 2. Tax Implications:
-   - Recourse Debt: The borrower remains personally liable for the debt, and the property’s fair market value is compared to the debt to determine gain or loss.
-   - Nonrecourse Debt: The borrower is not personally liable, and the full amount of the outstanding debt is treated as the amount realized.
+   - Recourse Debt: The borrower remains personally liable for the debt, & the property’s fair market value is compared to the debt to determine gain or loss.
+   - Nonrecourse Debt: The borrower is not personally liable, & the full amount of the outstanding debt is treated as the amount realized.
 
 ---
 
