--- a/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
+++ b/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
@@ -22,18 +22,18 @@ This section discusses income tax w/h on:
     - w/h
     - Estimated Tax
 
-## 1. What's New for 2024
+**What's New for 2024**
 
 - Tax Law Changes for 2024 - See **Pub. 505**, Tax w/h & Estimated Tax
 
-## 2. Reminders
+**Reminders**
 
 - **Estimated Tax Safe Harbor for Higher-Income Taxpayers** pay the smaller of:
      - PAY 90% of AGI
      - OR
      - 110% of est. tax
 
-## 3. Tax w/h
+## 1. Tax w/h
 
 - **Income Tax w/h on Types of Income** - See **Pub. 505**, Tax w/h & Estimated Tax
   - Salaries & Wages
@@ -49,7 +49,7 @@ This section discusses income tax w/h on:
   - https://www.irs.gov/businesses/small-businesses-self-employed/backup-w/h
   - Penalties for false information to avoid backup w/h. The civil penalty is \$500, criminal is fine up to \$1,000 or 1 year, or both.
 
-## 4. Determining Amount of Tax Withheld Using Form W-4
+## 2. Determining Amount of Tax Withheld Using Form W-4
 
 - <button onclick="buttonFunc()">Open W4</button> <script> function buttonFunc() { window.open("https://www.irs.gov/pub/irs-pdf/fw4.pdf?OWASP_CSRFTOKEN=5DVY-N1SM-ILPA-FK96-XIIS-IJRA-FFMU-ICIR"); } </script>
 - New Jobs, Pension Income, Checking & Changing Your w/h - NEEDS W4
@@ -59,62 +59,62 @@ This section discusses income tax w/h on:
 > **No Form W-4** If you don't give your employer a completed W-4, your employer must withhold at the highest rate, as if you were single.
 {: .block-danger }
   
-## 5. Exemption From w/h
+## 3. Exemption From w/h
 
 - **Eligibility Criteria**
 - **Special Rules for Students, Elderly, & Blind**
 - **Claiming Exemption with Form W-4**
 
-## 6. Supplemental Wages
+## 4. Supplemental Wages
 
 - **Definition & w/h Rules**
 - **Expense Allowances**
 
-## 7. Penalties for False Information on Form W-4
+## 5. Penalties for False Information on Form W-4
 
-## 8. Tips & Pub. 531, Reporting Tip Income
+## 6. Tips & Pub. 531, Reporting Tip Income
 
 - **Reporting Tips to Employers**
 - **w/h Rules**
 - **Reference:** Pub. 531, Reporting Tip Income
 
-## 9. Fringe Benefits
+## 7. Fringe Benefits
 
 - **Examples & w/h Rules**
 - **Reference:** Pub. 505, Tax w/h & Estimated Tax
 
-## 10. Sick Pay
+## 8. Sick Pay
 
 - **w/h Rules for Sick Pay**
 - **Special Cases Involving Third-Party Payers**
 - **Union Agreements & Sick Pay**
 
-## 11. Pensions & Annuities
+## 9. Pensions & Annuities
 
 - **w/h Rules**
 - **Reference:** Pub. 505, Tax w/h & Estimated Tax
 
-## 12. Gambling Winnings
+## 10. Gambling Winnings
 
 - **w/h Rules & Exceptions**
 - **Form W-2G**
 
-## 13. Unemployment Compensation
+## 11. Unemployment Compensation
 
 - **w/h Options & Requirements**
 - **Reference:** Form W-4V
 
-## 14. Federal Payments
+## 12. Federal Payments
 
 - **Optional w/h on Federal Payments**
 - **Reference:** Pub. 225, Farmer’s Tax Guide
 
-## 15. Backup w/h
+## 13. Backup w/h
 
 - **Situations Where Backup w/h Applies**
 - **Reference:** IRS Backup w/h Information
 
-## 16. Estimated Tax for 2024
+## 14. Estimated Tax for 2024
 
 - **Who Must Pay Estimated Tax**
 - **Special Rules for Farmers, Fishermen, & Aliens**
@@ -122,7 +122,7 @@ This section discusses income tax w/h on:
 - **How to Figure Estimated Tax**
 - **When to Pay Estimated Tax**
 
-## 17. How To Pay Estimated Tax
+## 15. How To Pay Estimated Tax
 
 - **Methods of Payment**
     - Online Payment Options
@@ -132,19 +132,19 @@ This section discusses income tax w/h on:
      - Pay by Check or Money Order
    - **Overpayment Credit**
 
-## 18. Credit for w/h & Estimated Tax for 2023
+## 16. Credit for w/h & Estimated Tax for 2023
 
 - **Claiming Credit on Tax Return**
 - **Special Rules for Multiple Employers, Corrected Forms, & Separate Returns**
 
-## 19. Underpayment Penalty for 2023
+## 17. Underpayment Penalty for 2023
 
 - **Conditions for Penalty**
 - **Special Rules for Farmers & Fishermen**
 - **IRS Penalty Calculation**
 - **Reference:** Instructions for Form 2210
 
-## 20. Publications & Forms Mentioned
+## 18. Publications & Forms Mentioned
 
  <script>
 function buttonFunc() { window.open("https://www.irs.gov/tax-professionals/enrolled-agents"); }
