--- a/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
+++ b/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
@@ -146,9 +146,7 @@ This section discusses income tax w/h on:
 
 ## 18. Publications & Forms Mentioned
 
- <script>
-function buttonFunc() { window.open("https://www.irs.gov/tax-professionals/enrolled-agents"); }
-</script>
+ <script> function buttonFunc() { window.open("https://www.irs.gov/forms-instructions"); } </script>
 <button onclick="buttonFunc()">Link to Forms</button>
 
 - **Pub. 505** - Tax w/h & Estimated Tax
