--- a/_pages/01-minor-p5279.md
+++ b/_pages/01-minor-p5279.md
@@ -46,8 +46,16 @@ title: Becoming as EA.pdf
 
 **Add'n information**
 
-  - https://www.irs.gov/tax-professionals/enrolled-agents/enrolled-agents-frequently-asked-questions
-  - https://www.irs.gov/tax-professionals/enrolled-agents
+- EAs generally have unlimited practice rights, meaning they can represent any taxpayer regarding any tax matter before any IRS office.
+
+- Enrolled agents are required to renew their licenses every three years.
+  - Renewal is done online at www.pay.gov.
+
+- Enrolled agents must have a valid **PTIN**, **renewed annually**, even if they do not prepare tax returns.
+  - EAs must take 16 hours annually, two of which must be in ethics.
+
+- https://www.irs.gov/tax-professionals/enrolled-agents/enrolled-agents-frequently-asked-questions
+- https://www.irs.gov/tax-professionals/enrolled-agents
 
 <div class="pdf-container">
     <iframe src="/irs.ea/assets/pdfs/minor-p5279.pdf#zoom=FitH" height="600" width="90%" allowFullScreen="true">
