changed minor 5279 No zoom

--- a/_pages/01-minor-p5279.md
+++ b/_pages/01-minor-p5279.md
@@ -13,7 +13,9 @@ title: Becoming as EA.pdf
 - Study for Special Enrollment Examination (SEE)
 - Pass 3 SEE tests
   - Sign up: https://www.prometric.com/test-takers/search/irs
+- Read Circular 230, `pcir230.pdf`
 - Pay $140 fee online at www.pay.gov
+  - https://www.irs.gov/pub/irs-pdf/f23.pdf
 - Pass a background check
 
 **About the exam**
@@ -58,6 +60,6 @@ title: Becoming as EA.pdf
 - https://www.irs.gov/tax-professionals/enrolled-agents
 
 <div class="pdf-container">
-    <iframe src="/irs.ea/assets/pdfs/minor-p5279.pdf#zoom=FitH" height="600" width="90%" allowFullScreen="true">
+    <iframe src="/irs.ea/assets/pdfs/minor-p5279.pdf" height="600" width="90%" allowFullScreen="true">
     </iframe>
 </div>
