--- a/_posts/p334.chapter.01.md
+++ b/_posts/p334.chapter.01.md
@@ -45,7 +45,7 @@ title: p334.chapter.1.pdf
 1. When Required: If you make or receive payments in your business.
 2. Filing Forms:  
    1. 1099-MISC for miscellaneous payments  
-   2. Form 1099-NEC for nonemployee compensation  
+   2. Form 1099-NEC for non-employee compensation  
    3. Form 8300 for cash payments over $10,000
 
 ## Going Out of Business Checklists
