--- a/_others/p17.md
+++ b/_others/p17.md
@@ -4,8 +4,7 @@ title: p17.pdf
 --- 
 
 
-
 <div class="pdf-container">
-    <iframe src="/irs.ea/assets/pdfs/p17.pdf" height="600" width="90%" allowFullScreen="true">
+    <iframe src="https://www.irs.gov/pub/irs-pdf/p17.pdf">
     </iframe>
 </div>
