--- a/_others/p54.md
+++ b/_others/p54.md
@@ -4,22 +4,8 @@ title: p54.pdf
 --- 
 
 
-<script>
-    // Get the iframe element
-    var iframe = document.querySelector('iframe');
-
-    // Set the sidebar property to false
-    iframe.contentWindow.postMessage({
-      type: 'command',
-      payload: {
-        command: 'sidebar',
-        params: {
-          enabled: false
-        }
-      }
-    }, '*');
-  </script>
 <div class="pdf-container">
-    <iframe src="/irs.ea/assets/pdfs/p54.pdf" height="600" width="90%" allowFullScreen="true">
+    <iframe src="https://www.irs.gov/pub/irs-pdf/p54.pdf" 
+    height="600" width="90%" allowFullScreen="true">
     </iframe>
 </div>
