--- a/_others/p54.md
+++ b/_others/p54.md
@@ -5,7 +5,7 @@ title: p54.pdf
 
 
 <div class="pdf-container">
-    <iframe src="https://www.irs.gov/pub/irs-pdf/p54.pdf" 
+    <iframe src="/irs.ea/assets/pdfs/p54.pdf" 
     height="600" width="90%" allowFullScreen="true">
     </iframe>
 </div>
