--- a/_others/p525.md
+++ b/_others/p525.md
@@ -6,6 +6,7 @@ title: p525.pdf
 
 
 <div class="pdf-container">
-    <iframe src="/irs.ea/assets/pdfs/p525.pdf" height="600" width="90%" allowFullScreen="true">
+    <iframe src="/irs.ea/assets/pdfs/p525.pdf" 
+    height="600" width="90%" allowFullScreen="true">
     </iframe>
 </div>
