--- a/_pages/01-minor-p5279.md
+++ b/_pages/01-minor-p5279.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Becoming as EA.pdf
+title: Becoming an EA
 --- 
 
 > This is an outline not detailed!  
@@ -22,10 +22,10 @@ title: Becoming as EA.pdf
 
 - Part 1 Individuals - 5 sections:
   1. Preliminary Work and Taxpayer Data (15%)
-  1. Specialized Returns for Individuals (15%)
-  1. Taxation and Advice (20%)
-  1. Deduction and Credits (25%)
-  1. Income and Assets (25%)
+  2. Specialized Returns for Individuals (15%)
+  3. Taxation and Advice (20%)
+  4. Deduction and Credits (25%)
+  5. Income and Assets (25%)
 
 - Part 2 Businesses - 3 topics:
   1. Specialized Returns and Taxpayers (15%)
