--- a/_pdfs/p17.md
+++ b/_pdfs/p17.md
@@ -5,7 +5,7 @@ title: p17.pdf
 
 
 <div class="pdf-container">
-    <iframe src="/irs.ea/assets/pdfs/f4868-auto-extension.pdf"
+    <iframe src="/irs.ea/assets/pdfs/p17.pdf"
     height="600" width="90%" allowFullScreen="true">
     </iframe>
 </div>
