--- a/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
+++ b/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
@@ -51,12 +51,14 @@ This section discusses income tax w/h on:
 
 ## 2. Determining Amount of Tax Withheld Using Form W-4
 
-- <button onclick="buttonFunc()">Open W4</button> <script> function buttonFunc() { window.open("https://www.irs.gov/pub/irs-pdf/fw4.pdf?OWASP_CSRFTOKEN=5DVY-N1SM-ILPA-FK96-XIIS-IJRA-FFMU-ICIR"); } </script>
+<script> function buttonFunc() { window.open("https://www.irs.gov/pub/irs-pdf/fw4.pdf?OWASP_CSRFTOKEN=5DVY-N1SM-ILPA-FK96-XIIS-IJRA-FFMU-ICIR"); } </script>
+
+- <button onclick="buttonFunc()">Open: IRS Forms</button> 
 - New Jobs, Pension Income, Checking & Changing Your w/h - NEEDS W4
 - **OK** for multiple worksheets for couples
 - **OK** for deductions worksheet
 
-> **No Form W-4** If you don't give your employer a completed W-4, your employer must withhold at the highest rate, as if you were single.
+> **No Form W-4?** If you don't give your employer a completed W-4, your employer must withhold at the highest rate, as if you were single.
 {: .block-danger }
   
 ## 3. Exemption From w/h
