MV p334 to pdfs

--- a/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
+++ b/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
@@ -18,7 +18,7 @@ This section discusses income tax w/h on:
 1. Unemployment compensation, &
 1. Certain federal payments.
 
-- Methods to Pay Tax as You Earn Income
+- Methods to Pay Taxes
     - w/h
     - Estimated Tax
 
@@ -29,8 +29,7 @@ This section discusses income tax w/h on:
 **Reminders**
 
 - **Estimated Tax Safe Harbor for Higher-Income Taxpayers** pay the smaller of:
-     - PAY 90% of AGI
-     - OR
+     - PAY 90% of AGI, **OR**
      - 110% of est. tax
 
 ## 1. Tax w/h
